Add data-driven town advancements, `/admintown advancements` command (#210)